--- a/level-1/abstract/index.html
+++ b/level-1/abstract/index.html
@@ -9,7 +9,7 @@
 <body>
   <header>
     <nav>
-      <img src="./images/bx-help-circle.svg" alt="Company logo">
+      <img src="./images/bx-logo.svg" alt="Company logo">
       <h1>Abstract</h1>
       <a href="./index.html">Help Center</a>
       <button>Submit a request</button>
@@ -23,7 +23,7 @@
     </section>
     <section>
       <div>
-        <div><img src="./images/bx-sitemap.svg" alt=""></div>
+        <div><img src="./images/bx-sitemap.svg" alt="Branching Filesystem Icon"></div>
         <div>
           <h2>Using Abstract</h2>
           <p>Abstract lets you manage, version, and document your designs in 
@@ -32,7 +32,7 @@
         </div>
       </div>
       <div>
-        <div><img src="./images/bx-chalkboard.svg" alt=""></div>
+        <div><img src="./images/bx-chalkboard.svg" alt="Chalkboard Icon"></div>
         <div>
           <h2>Manage your account</h2>
           <p>Manage your account Configure your account settings, such as your 
@@ -41,7 +41,7 @@
         </div>
       </div>
       <div>
-        <div><img src="./images/bx-grid.svg" alt=""></div>
+        <div><img src="./images/bx-grid.svg" alt="Grid Icon"></div>
         <div>
           <h2>Manage organizations, teams, and projects</h2>
           <p>Use Abstract organizations, teams, and projects to organize your 
@@ -49,7 +49,7 @@
         </div>
       </div>
       <div>
-        <div><img src="./images/bx-bar-chart-alt.svg" alt=""></div>
+        <div><img src="./images/bx-bar-chart-alt.svg" alt="Bar chart Icon"></div>
         <div>
           <h2>Manage billing</h2>
           <p>Change subscriptions and payment details.</p>
@@ -57,7 +57,7 @@
         </div>
       </div>
       <div>
-        <div><img src="./images/bxs-key.svg" alt=""></div>
+        <div><img src="./images/bx-lock-alt.svg" alt="Padlock Icon"></div>
         <div>
           <h2>Authenticate to Abstract</h2>
           <p>Set up and configure SSO, SCIM, and Just-in-Time provisioning.</p>
@@ -65,7 +65,7 @@
         </div>
       </div>
       <div>
-        <div><img src="./images/bx-message-dots.svg" alt=""></div>
+        <div><img src="./images/bx-message-dots.svg" alt="Message notification Icon"></div>
         <div>
           <h2>Abstract support</h2>
           <p>Get in touch with a human.</p>
@@ -107,7 +107,7 @@
       </ul>
     </section>
     <section>
-      <img src="./images/bx-help-circle.svg" alt="Company Logo">
+      <img src="./images/bx-logo.svg" alt="Company Logo">
       <p>© Copyright 2022<br>
         Abstract Studio Design, Inc.<br>
         All rights reserved</p>
