Add category list style

--- a/level-1/abstract/index.html
+++ b/level-1/abstract/index.html
@@ -10,8 +10,8 @@
   <header>
     <nav class="header">
       <img class="header__logo filter--white" src="./images/bx-logo.svg" alt="Company logo">
-      <h1 class="header__logo-name">Abstract |</h1>
-      <a class="header__link" href="./index.html">Help Center</a>
+      <h1 class="header__logo-name" title="Go to goabstract.com">Abstract |</h1>
+      <a class="header__link" href="./index.html" title="Home">Help Center</a>
       <div class="header__button-container header__button-container--small-screen">
         <button class="header__search">
           <img class="filter--white" src="./images/bx-magnifying-glass.svg" alt="Magnifying glass icon">
@@ -56,6 +56,7 @@
           <h2>Manage organizations, teams, and projects</h2>
           <p>Use Abstract organizations, teams, and projects to organize your 
             people and your work.</p>
+          <a href="">Learn More &#8594</a>
         </div>
       </div>
       <div class="catagory-list__item">
