--- a/level-1/abstract/index.html
+++ b/level-1/abstract/index.html
@@ -32,55 +32,61 @@
       <input class="search-section__search-bar" id="help-search" type="search" name="search" placeholder="Search">
     </section>
     <section class="catagory-list">
-      <div class="catagory-list__item">
-        <div><img src="./images/bx-sitemap.svg" alt="Branching Filesystem Icon"></div>
-        <div>
-          <h2>Using Abstract</h2>
-          <p>Abstract lets you manage, version, and document your designs in 
-            one place.</p>
-          <a href="">Learn More &#8594</a>
+      <div class="catagory-list__row">
+        <div class="catagory-list__item">
+          <div><img src="./images/bx-sitemap.svg" alt="Branching Filesystem Icon"></div>
+          <div>
+            <h2>Using Abstract</h2>
+            <p>Abstract lets you manage, version, and document your designs in 
+              one place.</p>
+            <a href="">Learn More &#8594</a>
+          </div>
+        </div>
+        <div class="catagory-list__item">
+          <div><img src="./images/bx-chalkboard.svg" alt="Chalkboard Icon"></div>
+          <div>
+            <h2>Manage your account</h2>
+            <p>Manage your account Configure your account settings, such as your 
+              email, profile details, and password.</p>
+            <a href="">Learn More &#8594</a>
+          </div>
         </div>
       </div>
-      <div class="catagory-list__item">
-        <div><img src="./images/bx-chalkboard.svg" alt="Chalkboard Icon"></div>
-        <div>
-          <h2>Manage your account</h2>
-          <p>Manage your account Configure your account settings, such as your 
-            email, profile details, and password.</p>
-          <a href="">Learn More &#8594</a>
+      <div class="catagory-list__row">
+        <div class="catagory-list__item">
+          <div><img src="./images/bx-grid.svg" alt="Grid Icon"></div>
+          <div>
+            <h2>Manage organizations, teams, and projects</h2>
+            <p>Use Abstract organizations, teams, and projects to organize your 
+              people and your work.</p>
+            <a href="">Learn More &#8594</a>
+          </div>
+        </div>
+        <div class="catagory-list__item">
+          <div><img src="./images/bx-bar-chart-alt.svg" alt="Bar chart Icon"></div>
+          <div>
+            <h2>Manage billing</h2>
+            <p>Change subscriptions and payment details.</p>
+            <a href="">Learn More &#8594</a>
+          </div>
         </div>
       </div>
-      <div class="catagory-list__item">
-        <div><img src="./images/bx-grid.svg" alt="Grid Icon"></div>
-        <div>
-          <h2>Manage organizations, teams, and projects</h2>
-          <p>Use Abstract organizations, teams, and projects to organize your 
-            people and your work.</p>
-          <a href="">Learn More &#8594</a>
+      <div class="catagory-list__row">
+        <div class="catagory-list__item">
+          <div><img src="./images/bx-lock-alt.svg" alt="Padlock Icon"></div>
+          <div>
+            <h2>Authenticate to Abstract</h2>
+            <p>Set up and configure SSO, SCIM, and Just-in-Time provisioning.</p>
+            <a href="">Learn More &#8594</a>
+          </div>
         </div>
-      </div>
-      <div class="catagory-list__item">
-        <div><img src="./images/bx-bar-chart-alt.svg" alt="Bar chart Icon"></div>
-        <div>
-          <h2>Manage billing</h2>
-          <p>Change subscriptions and payment details.</p>
-          <a href="">Learn More &#8594</a>
-        </div>
-      </div>
-      <div class="catagory-list__item">
-        <div><img src="./images/bx-lock-alt.svg" alt="Padlock Icon"></div>
-        <div>
-          <h2>Authenticate to Abstract</h2>
-          <p>Set up and configure SSO, SCIM, and Just-in-Time provisioning.</p>
-          <a href="">Learn More &#8594</a>
-        </div>
-      </div>
-      <div class="catagory-list__item">
-        <div><img src="./images/bx-message-dots.svg" alt="Message notification Icon"></div>
-        <div>
-          <h2>Abstract support</h2>
-          <p>Get in touch with a human.</p>
-          <a href="">Learn More &#8594</a>
+        <div class="catagory-list__item">
+          <div><img src="./images/bx-message-dots.svg" alt="Message notification Icon"></div>
+          <div>
+            <h2>Abstract support</h2>
+            <p>Get in touch with a human.</p>
+            <a href="">Learn More &#8594</a>
+          </div>
         </div>
       </div>
     </section>
