Add responsive footer style

--- a/level-1/abstract/index.html
+++ b/level-1/abstract/index.html
@@ -94,38 +94,44 @@
   </main>
   <footer>
     <section class="footer-links">
-      <ul>
-        <h2>Abstract</h2>
-        <li><a href="">Start Trial</a></li>
-        <li><a href="">Pricing</a></li>
-        <li><a href="">Download</a></li>
-      </ul>
-      <ul>
-        <h2>Resources</h2>
-        <li><a href="">Blog</a></li>
-        <li><a href="">Help Center</a></li>
-        <li><a href="">Release Notes</a></li>
-        <li><a href="">Status</a></li>
-      </ul>
-      <ul>
-        <h2>Community</h2>
-        <li><a href="">Twitter</a></li>
-        <li><a href="">LinkedIn</a></li>
-        <li><a href="">Facebook</a></li>
-        <li><a href="">Dribbble</a></li>
-        <li><a href="">Podcast</a></li>
-      </ul>
-      <ul>
-        <h2>Company</h2>
-        <li><a href="">About Us</a></li>
-        <li><a href="">Careers</a></li>
-        <li><a href="">Legal</a></li>
-        <h2>Contact Us</h2>
-        <li><a href="mailto:info@abstract.com">info@abstract.com</a></li>
-      </ul>
+      <div class="footer-links__row">
+        <ul>
+          <h2>Abstract</h2>
+          <li><a href="">Start Trial</a></li>
+          <li><a href="">Pricing</a></li>
+          <li><a href="">Download</a></li>
+        </ul>
+        <ul>
+          <h2>Resources</h2>
+          <li><a href="">Blog</a></li>
+          <li><a href="">Help</a></li> 
+          <li><a href="">Center</a></li>
+          <li><a href="">Release</a></li>
+          <li><a href="">Notes</a></li>
+          <li><a href="">Status</a></li>
+        </ul>
+      </div>
+      <div class="footer-links__row">
+        <ul>
+          <h2>Community</h2>
+          <li><a href="">Twitter</a></li>
+          <li><a href="">LinkedIn</a></li>
+          <li><a href="">Facebook</a></li>
+          <li><a href="">Dribbble</a></li>
+          <li><a href="">Podcast</a></li>
+        </ul>
+        <ul>
+          <h2>Company</h2>
+          <li><a href="">About Us</a></li>
+          <li><a href="">Careers</a></li>
+          <li><a href="">Legal</a></li>
+          <h2>Contact Us</h2>
+          <li><a href="mailto:info@abstract.com">info@abstract.com</a></li>
+        </ul>
+      </div>
     </section>
     <section class="footer-copyright">
-      <img src="./images/bx-logo.svg" alt="Company Logo">
+      <img class="filter--white" src="./images/bx-logo.svg" alt="Company Logo">
       <p>© Copyright 2022<br>
         Abstract Studio Design, Inc.<br>
         All rights reserved</p>
