--- a/level-1/abstract/index.html
+++ b/level-1/abstract/index.html
@@ -21,7 +21,7 @@
           <img class="filter--white" src="./images/bx-menu.svg" alt="Hamburger icon">
         </button>
       </div>
-      <div class="hidden header__button-container header__button-container--big-screen">
+      <div class="header__button-container header__button-container--big-screen">
         <button class="header__submit-request">Submit a request</button>
         <button class="header__sign-in">Sign in</button>
       </div>
