--- a/level-1/abstract/index.html
+++ b/level-1/abstract/index.html
@@ -6,6 +6,7 @@
   <title>Abstract</title>
   <link rel="stylesheet" href="./style.css">
   <link rel="icon" href="./images/bx-logo.svg">
+  <script defer src="script.js"></script>
 </head>
 <body>
   <header>
