--- a/level-1/biggestzine/index.html
+++ b/level-1/biggestzine/index.html
@@ -9,49 +9,49 @@
 </head>
 <body>
   <header>
-    <h1>BiggestZine</h1>
-    <nav>
-      <ul>
-        <li><a href="#issue-1">Issue #1</a></li>
-        <li><a href="#issue-2">Issue #2</a></li>
-        <li><a href="#issue-3">Issue #3</a></li>
-        <li><a href="#issue-4">Issue #4</a></li>
-        <li><a href="#issue-5">Issue #5</a></li>
+    <h1 class="header__title">BiggestZine</h1>
+    <nav class="sidebar-nav">
+      <ul class="sidebar-nav__list">
+        <li class="sidebar-nav__link"><a href="#issue-1">Issue #1</a></li>
+        <li class="sidebar-nav__link"><a href="#issue-2">Issue #2</a></li>
+        <li class="sidebar-nav__link"><a href="#issue-3">Issue #3</a></li>
+        <li class="sidebar-nav__link"><a href="#issue-4">Issue #4</a></li>
+        <li class="sidebar-nav__link"><a href="#issue-5">Issue #5</a></li>
       </ul>
     </nav>
   </header>
   <main>
     <section id="issue-1" class="issue-component">
-      <img src="./images/red-issue.jpg" alt="">
-      <h2>Issue #1</h2>
-      <a href="">GET IT NOW!</a>
+      <img class="issue-component__image" src="./images/red-issue.jpg" alt="vibrant forest">
+      <h2 class="issue-component__title">Issue #1</h2>
+      <a class="issue-component__link" href="">GET IT NOW!</a>
     </section>
     <section id="issue-2" class="issue-component">
-      <img src="./images/orange-issue.jpg" alt="">
-      <h2>Issue #2</h2>
-      <a href="">GET IT NOW!</a>
+      <img class="issue-component__image" src="./images/orange-issue.jpg" alt="smooth canyon">
+      <h2 class="issue-component__title">Issue #2</h2>
+      <a class="issue-component__link" href="">GET IT NOW!</a>
     </section>
     <section id="issue-3" class="issue-component">
-      <img src="./images/green-issue.jpg" alt="">
-      <h2>Issue #3</h2>
-      <a href="">GET IT NOW!</a>
+      <img class="issue-component__image" src="./images/green-issue.jpg" alt="cold mediteranian woods">
+      <h2 class="issue-component__title">Issue #3</h2>
+      <a class="issue-component__link" href="">GET IT NOW!</a>
     </section>
     <section id="issue-4" class="issue-component">
-      <img src="./images/blue-issue.jpg" alt="">
-      <h2>Issue #4</h2>
-      <a href="">GET IT NOW!</a>
+      <img class="issue-component__image" src="./images/blue-issue.jpg" alt="snowy mountain with a clear sky background">
+      <h2 class="issue-component__title">Issue #4</h2>
+      <a class="issue-component__link" href="">GET IT NOW!</a>
     </section>
     <section id="issue-5" class="issue-component">
-      <img src="./images/purple-issue.jpg" alt="">
-      <h2>Issue #5</h2>
-      <a href="">GET IT NOW!</a>
+      <img class="issue-component__image" src="./images/purple-issue.jpg" alt="close-up of flowers">
+      <h2 class="issue-component__title">Issue #5</h2>
+      <a class="issue-component__link" href="">GET IT NOW!</a>
     </section> 
   </main>
   <footer>
-    <p>Here is BiggestZine we are dedicated to creativity and exploration of nature.<br>
+    <p class="footer__description">Here is BiggestZine we are dedicated to creativity and exploration of nature.<br>
     Our intent is to spread techno-ecological ideas for the improvement of humanity.<br>
     © 2022 Raphael Radespiel</p>
-    <p>If you're interested in building a sustainable future, contact us at <a href="mailto:contact@biggestzine.com">contact@biggestzine.com</a></p>
+    <p class="footer__contact">If you're interested in building a sustainable future, contact us at <a class="footer__email-link" href="mailto:contact@biggestzine.com">contact@biggestzine.com</a></p>
   </footer>
 </body>
 </html>
